# folio

./: .gitignore  .npmrc  .prettierrc  CNAME  PROJECT_STRUCTURE.md  README.md  foobar.txt  next.config.js  package-lock.json  package.json  tsconfig.json  verify-crypto.js  vitest.config.ts
.github/workflows/: deploy.yml  main-push.yml  nextjs.yml
docs/: blog-tute.md  blogging-system.md  japanese-artisan-marketplace-demo-spec.md  sui-demo-spec.md
public/: fn0101.xls
public/sui/: honolulu-pamphlet.html  nara-pamphlet.html
scripts/: extract-jp-household-budget.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AdaptiveQualityErrorBoundary.tsx  AdaptiveQualityProvider.tsx  AppInitializer.tsx  CryptographicDemo.tsx  DependencyGraph3D.tsx  ErrorBoundary.tsx  FallbackSystem.tsx  FluidSimulationShader.tsx  GPUParticleSystem.tsx  GalleryNavigation.tsx  ImageProcessingDemo.tsx  KeyboardHelpModal.tsx  MathGallery.tsx  Navigation3D.tsx  PageTransitionLoader.tsx  PhysicsSimulationDemo.tsx  QualitySettingsPanel.tsx  RaymarchingRenderer.tsx  SceneTransitionDemo.tsx  SceneTransitionLoader.tsx  ShaderPlayground.tsx  SimpleNavigation3D.tsx  Timeline3D.tsx  VisualizationCanvas.tsx  VisualizationControls.tsx
src/hooks/: useAdaptiveQuality.ts  useDeviceCapabilities.ts  useNavigation3D.ts  usePerformanceMonitor.ts  useSceneManager.ts  useSceneTransition.ts  useTimeline3D.ts
src/lib/: adaptive-quality-system.ts  blog-core.ts  blog-helpers.ts  blog-mdx-options.ts  blog.ts  (+18 more)
tmp/: takumi_image_coordinator.py
wasm/: Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
(+261 files in other folders)
